syntax = "proto3";
import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "IRegistry";

package forum;

service IRegistry {
  rpc registerVectorService(ServiceEndpoint) returns (google.protobuf.Empty);
  rpc getVectorServices(google.protobuf.Empty) returns (VectorServices);

  rpc registerTM(ServiceEndpoint) returns (google.protobuf.Empty);
  rpc getTM(google.protobuf.Empty) returns (ServiceEndpoint);

  rpc registerTPLM(ServiceEndpoint) returns (google.protobuf.Empty);
  rpc getTPLM(google.protobuf.Empty) returns(ServiceEndpoint);

  rpc getNumberOfVectorServices(google.protobuf.Empty) returns (Number);
  rpc checkInvariant(google.protobuf.Empty) returns(Result);
}

message Result {
  bool status = 1;
}

message ServiceEndpoint {
  string ip = 1;
  int32 port = 2;
  string name = 3;
}

message VectorServices {
  repeated ServiceEndpoint vectors = 1;
}

message Number {
  int32 value = 1;
}